Bug 472322.  Don't treat non-XUL listboxbody/listitem specially in XUL frame construction.  r=enndeakin, sr=roc